# shell-mind

./: .env.example  README.md  pyproject.toml
cli/: __init__.py  main.py
src/: agent.py  config.py  llm.py  main.py  prompt.py  ui_utils.py
src/tools/: check_git.py  check_process.py  command_executor.py  env_detector.py  glob_tool.py  grep_tool.py  list_file.py  memory.py  read_file.py  run_cmd.py  schema.py  todo.py  tool_registry.py  web_search.py  workflow_manager.py  write_file.py
