[project]
name = "shell-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "ipykernel>=7.1.0",
    "rich>=14.2.0",
    "questionary>=2.0.0",
    "simple-term-menu>=1.6.4",
    "textual>=0.79.1",
]
